# thumbnail_gen

./: .gitignore  Cargo.toml  README.MD
.github/workflows/: build.yaml
ffmpeg/include/libavutil/: ffversion.h
src/: cli.rs  image.rs  main.rs  video.rs
