[package]
edition = "2021"
name = "thumbnail_gen"
version = "0.1.0"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
image = {version = "0.25.5", features = ["jpeg"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1.42.0", features = ["full"]}
